# workspace_zulip_bridge

./: .gitignore  AGENTS.md  README.md  pyproject.toml  tox.ini
.github/workflows/: exordos-element.yml  tests.yaml
docs/: production_release_workflow.md  provider_http_runtime.md  zulip_12_1_1_api_assumptions.md
etc/: bridge.conf.example
exordos/: exordos.yaml
exordos/images/: bootstrap-persistence.sh  bootstrap.sh  install.sh  restart.sh
exordos/manifests/: workspace_zulip_bridge.yaml.j2
migrations/: 0000-initialize-bridge-operational-state-18f707.py  0001-add-Zulip-provider-scheduler-state-143113.py  0001_initial.sql  0002-remove-legacy-message-projection-deliveries-e1636f.py  0003-requeue-message-missing-topic-projection-ed8a5e.py  0004-gate-selected-chat-messages-on-participants-23f11f.py  0005-rebuild-message-topic-dependencies-7c52a1.py  0006-index-pending-Workspace-deliveries-c143b4.py
workspace_zulip_bridge/: __init__.py  canonical.py  cli.py  config.py  control.py  converter.py  credentials.py  enrollment.py  file_api.py  health.py  migrate.py  mtls.py  provider_api.py  provider_protocol.py  scheduler.py  service.py  storage.py  zulip_adapter.py
workspace_zulip_bridge/tests/: conftest.py  test_bootstrap_persistence.py  test_ci_workflows.py  test_config.py  test_control.py  test_converter.py  test_credentials.py  test_enrollment.py  test_file_api.py  test_manifest.py  test_migrations.py  test_mtls.py  test_postgres_integration.py  test_provider_api.py  test_provider_protocol.py  test_provider_service.py  test_scheduler.py  test_service.py  (+2 more)
(+3 files in other folders)
