[project]
name = "workspace-zulip-bridge"
version = "0.0.1"
description = "Workspace bridge for personal Zulip accounts"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "CASSI", email = "cassi@exordos.com"}]
dependencies = [
    "certifi>=2025.0.0",
    "cryptography>=45.0.0,<46.0.0",
    "httpx>=0.27.0,<1.0.0",
    "pyhpke>=0.6.4,<0.7.0",
    "requests>=2.32.0,<3.0.0",
    "restalchemy>=15.2.2,<16.0.0",
    "zulip>=0.9.1,<0.10.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=5.0.0,<7.0.0",
    "ruff>=0.9.0,<1.0.0",
]

[project.scripts]
workspace-zulip-bridge = "workspace_zulip_bridge.cli:main"
workspace-zulip-bridge-healthcheck = "workspace_zulip_bridge.health:main"
workspace-zulip-bridge-enroll = "workspace_zulip_bridge.enrollment:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["workspace_zulip_bridge/tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
